BENTO-13: * Fix Gradle `run` tasks`.